# mlir-probe

./: .gitignore  CMakeLists.txt  README.md
include/Dialect/Probe/IR/: CMakeLists.txt  Probe.h  ProbeBase.td  ProbeOps.td
include/Dialect/Probe/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/Probe/IR/: CMakeLists.txt  ProbeDialect.cpp  ProbeOps.cpp
lib/Dialect/Probe/Transforms/: CMakeLists.txt  LowerToFuncCalls.cpp
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/example/: CMakeLists.txt  probe.cpp  probe.h
tests/probe/: bufferizer.mlir  end-to-end.mlir  lower-to-func-calls-negative.mlir  lower-to-func-calls.mlir  verifier.mlir
tools/: CMakeLists.txt
tools/probe-opt/: CMakeLists.txt  probe-opt.cpp
